cambio agregamos sitio de twitch

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <p>
        Hola este es mi inicio en el mundo de la programació
-        seguimos adelante...
+        seguimos adelante... esto se pondra mejor
     </p>
     
 </body>
